fix alignment on mobile

--- a/main.css
+++ b/main.css
@@ -4,6 +4,10 @@ html {
     font-weight: 300;
 }
 
+body {
+    padding-top: 60px;
+}
+
 a {
     text-decoration: none;
     color: #1565c0;
@@ -14,15 +18,12 @@ a:hover {
 }
 
 #content {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%);
     text-align: center;
     max-width: 520px;
     padding: 32px;
     line-height: 1.6em;
+    margin: auto;
+    /* Center content horizontally */
 }
 
 .avatar {
@@ -36,7 +37,6 @@ a:hover {
     padding: 0;
     display: flex;
     justify-content: space-between;
-    width: 80%;
     max-width: 320px;
     margin: 1em auto;
 }
@@ -93,9 +93,11 @@ body.dark-mode .barca {
     font-size: 1.5em;
     cursor: pointer;
     color: black;
-    position: absolute;
+    position: fixed;
     top: 20px;
     right: 20px;
+    z-index: 999;
+    /* Ensure it stays on top */
 }
 
 #dark-mode-toggle:hover {
@@ -108,4 +110,10 @@ body.dark-mode #dark-mode-toggle {
 
 body.dark-mode #dark-mode-toggle:hover {
     color: #bb86fc;
+}
+
+@media screen and (max-width: 600px) {
+    #content {
+        padding: 16px;
+    }
 }
